<resources>

    <string name="facebook_app_key">307892630277765</string>
    <string name="kakao_app_key">8a8535b0853850c96b32ec19117478db</string>

    <string name="yet_dev_page">미구현된 페이지 입니다.</string>
    <string name="yet_dev_func">미구현된 기능 입니다.</string>

    <string name="app_name">challengers</string>
    <string name="loading">로딩중입니다.</string>
    <string name="confirm">확인</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="login_error">로그인 도중 오류가 발생했습니다.</string>
    <string name="session_error">세션이 닫혔습니다. 다시 시도해주세요.</string>

    <string name="positive">네</string>
    <string name="negative">아니오</string>

    <string name="searchItem">탐색</string>
    <string name="newItem">개설</string>
    <string name="cameraItem">인증</string>
    <string name="feedItem">피드</string>
    <string name="mypageItem">마이페이지</string>

    <string name="popupTitle_line1">안녕하세요.</string>
    <string name="popupTitle_line2">챌린져스 입니다.</string>
    <string name="popupContents_line1">확실하게 목표를 달성하고, </string>
    <string name="popupContents_line2">꾸준한 습관형성을 돕기 위한 서비스입니다. </string>
    <string name="popupContents_line3">다양한 챌린지들이 준비되어 있습니다. </string>
    <string name="popupContents_line4">챌린저스에서 함께, 즐겁게, 쉽게,  </string>
    <string name="popupContents_line5">목표 달성해요! </string>
    <string name="popupLogin_ask">이미 회원이신가요? </string>
    <string name="popupLogin_ask_btn">[로그인] </string>
    <string name="popupLogin_exit">닫기 </string>

    <string name="popupSearchTab_line1">탐색탭.</string>
    <string name="popupSearchTabContents_line1">탐색 탭에서는 </string>
    <string name="popupSearchTabContents_line2">지금 모집 중인 챌린지를 볼 수 있어요. </string>
    <string name="popupSearchTabContents_line3">계획한 목표가 있다면 검색해 보세요!</string>
    <string name="popupSearchTabContents_line4">둘러보다 보면,  </string>
    <string name="popupSearchTabContents_line5">생각지도 못한 재미있는 챌린지를</string>
    <string name="popupSearchTabContents_line6">발견할 수 있답니다.</string>
    <string name="popupGoSearchTab">탐색탭 둘러보기 </string>

    <string name="login">로그인</string>
    <string name="enter_email">이메일 주소 입력</string>
    <string name="enter_pw">비밀번호 입력</string>
    <string name="login_start">시작하기</string>
    <string name="find_email">이메일 찾기</string>
    <string name="re_pw">비밀번호 재설정</string>
    <string name="start_facebook">페이스북으로 시작하기</string>
    <string name="start_naver">네이버로 시작하기</string>
    <string name="start_kakao">카카오로 시작하기</string>

    <string name="login_empty_email">이메일을 입력해 주세요.</string>
    <string name="login_success_email">사용가능한 이메일입니다.</string>
    <string name="login_wrong_email_form">이메일 형식이 올바르지 않습니다.</string>
    <string name="login_password_length">8자리 이상으로 입력해주세요.</string>
    <string name="login_password_confirm">비밀번호가 일치하지 않습니다.</string>
    <string name="login_no_match_user">해당 이메일로 가입된 유저가 없습니다. 가입을 하신 경우 카카오톡 플러스친구 @챌린져스, 혹은 supportchlngers.com으로 문의주시면 답변 드리겠습니다.</string>

    <string name="b_fab_text">가입/로그인</string>

    <string name="register_title">회원가입</string>
    <string name="register_company_or_not">기업회원</string>
    <string name="register_enter_pw">비밀번호 입력 (영문, 숫자 포함 8자리)</string>
    <string name="register_confirm_pw">비밀번호 확인</string>
    <string name="register_next">다음</string>
    <string name="register_with_email">이메일로 로그인</string>

    <string name="mypage_title">마이 페이지</string>
    <string name="mypage_nickname">닉네임</string>
    <string name="mypage_cash">캐시 0원</string>
    <string name="mapage_wincash">상금 0원</string>
    <string name="mypage_level">등급</string>
    <string name="mypage_followers">팔로워</string>
    <string name="mypage_follwing">팔로잉</string>
    <string name="mypage_favorite">나의 관심분야</string>
    <string name="mypage_seechallege">챌린지보기></string>
    <string name="mypage_getbadge">획득뱃지</string>
    <string name="mypage_showdetail">자세히보기></string>
    <string name="mypage_gethabit">획득습관</string>
    <string name="mypage_gethabit_strength">역량</string>
    <string name="mypage_gethabit_health">건강</string>
    <string name="mypage_gethabit_relationship">관계</string>
    <string name="mypage_gethabit_asset">자산</string>
    <string name="mypage_gethabit_daily">생활</string>
    <string name="mypage_gethabit_hobby">취미</string>
    <string name="mypage_write_everyday">매일 기록</string>
    <string name="mypage_see_report">통계보기></string>

    <string name="setting_title">설정</string>
    <string name="setting_change_profile">프로필 관리</string>
    <string name="setting_fit_setting">맞춤 설정</string>
    <string name="setting_announce">공지사항</string>
    <string name="setting_frequent_qestion">자주묻는질문</string>
    <string name="setting_complain_suggest_topic">1:1문의/챌린지 주제제안</string>
    <string name="setting_vote_challenge">챌린지 주제투표</string>
    <string name="setting_result_Declaim">인증샷 신고 결과</string>
    <string name="setting_invite_friends_get_heart">친구 초대하고 하트 받기</string>
    <string name="setting_guide">첫 사용 가이드</string>
    <string name="setting_legal">법적 고지</string>
    <string name="logout">LOGOUT</string>

    <string name="change_profile_title">마이 프로필</string>
    <string name="change_profile_favorite">관심분야</string>
    <string name="change_profile_introduction">소개</string>
    <string name="change_profile_email">이메일</string>
    <string name="change_profile_name">이름</string>
    <string name="change_profile_phone_num">휴대폰번호</string>
    <string name="change_profile_pw">비밀번호</string>
    <string name="change_profile_account">계좌번호</string>
    <string name="change_profile_admin_company">기업회원 인증</string>
    <string name="change_profile_exit">[회원탈퇴]</string>

    <string name="to_follow">팔로우</string>
    <string name="follower_recommend">회원님을 위한 추천</string>

    <string name="search_what_do_you_want_habit">어떤 습관을 가지고 싶으신가요?</string>
    <string name="search_msg1">님에게 필요한</string>
    <string name="search_msg2">좋은 습관을 추천해요.</string>
    <string name="search_show_all">전체 보기</string>
    <string name="search_until_today">오늘 마감</string>
    <string name="search_until_tomorrow">내일 마감</string>

    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다. </string>


</resources>
