<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/a_searchItem"
        android:icon="@drawable/ic_c_search_selector"
        android:enabled="true"
        android:title="@string/searchItem"/>
    <item
        android:id="@+id/a_newItem"
        android:icon="@drawable/ic_c_new_selector"
        android:enabled="true"
        android:title="@string/newItem"/>
    <item
        android:id="@+id/a_cameraItem"
        android:icon="@drawable/ic_c_camera_selector"
        android:enabled="true"
        android:checked="true"
        android:title="@string/cameraItem"/>
    <item
        android:id="@+id/a_feedItem"
        android:icon="@drawable/ic_c_feed_selector"
        android:enabled="true"
        android:title="@string/feedItem"/>
    <item
        android:id="@+id/a_mypageItem"
        android:icon="@drawable/ic_c_person_selector"
        android:enabled="true"
        android:title="@string/mypageItem"/>

</menu>