<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/b_searchItem"
        android:icon="@drawable/ic_search_24dp"
        android:enabled="true"
        android:checked="true"
        android:title="@string/searchItem"/>
    <item
        android:id="@+id/b_cameraItem"
        android:icon="@drawable/ic_search_24dp"
        android:enabled="true"
        android:title="@string/cameraItem"/>
    <item
        android:id="@+id/b_feedItem"
        android:icon="@drawable/ic_camera_24dp"
        android:enabled="true"
        android:title="@string/feedItem"/>
    <item
        android:id="@+id/b_mypageItem"
        android:icon="@drawable/ic_person_24dp"
        android:enabled="true"
        android:title="@string/mypageItem"/>

</menu>