<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="340dp"
    android:orientation="vertical"
    android:background="@drawable/background_round_shape_white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/dialog_popup_Search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            tools:text="@string/popupSearchTab_line1" />

        <ImageView
            android:layout_marginLeft="130dp"
            android:layout_height="50dp"
            android:layout_width="50dp"
            app:srcCompat="@drawable/ic_search_black_24dp"
            android:tint="@color/colorPrimary"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/dialog_popup_search_contents_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginLeft="30dp"
        tools:text="@string/popupSearchTabContents_line1" />
    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"
        android:id="@+id/dialog_popup_search_contents_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/popupSearchTabContents_line2" />

    <TextView
        android:layout_marginTop="4dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/dialog_popup_search_contents_line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/popupSearchTabContents_line3" />

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:id="@+id/dialog_popup_search_contents_line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/popupSearchTabContents_line4" />

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"

        android:id="@+id/dialog_popup_search_contents_line5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/popupSearchTabContents_line5" />

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"
        android:id="@+id/dialog_popup_search_contents_line6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/popupSearchTabContents_line6" />


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/dialog_popup_search_gotoSearchTab_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_round_primary_color"
        android:layout_gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/popupGoSearchTab"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>