<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="340dp"
    android:orientation="vertical"
    android:background="@drawable/background_round_shape_white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/dialog_popup_info_title_line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                tools:text="@string/popupTitle_line1" />
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/dialog_popup_info_title_line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                tools:text="@string/popupTitle_line2" />
        </LinearLayout>
        <ImageView
            android:id="@+id/dialog_popup_info_iv"
            android:layout_marginLeft="60dp"
            android:layout_height="50dp"
            android:layout_width="50dp"
            app:layout_constraintTop_toTopOf="@id/dialog_popup_info_title_line1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/dialog_popup_info_title_line2"
            android:src="@drawable/circleicon100" />
    </LinearLayout>


    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/dialog_popup_info_contents_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginLeft="30dp"
        tools:text="@string/popupContents_line1" />
    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"
        android:id="@+id/dialog_popup_info_contents_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/popupContents_line2" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/dialog_popup_info_contents_line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/popupContents_line3" />

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"
        android:id="@+id/dialog_popup_info_contents_line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/popupContents_line4" />

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"

        android:id="@+id/dialog_popup_info_contents_line5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/popupContents_line5" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dialog_popup_info_login_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:text="@string/popupLogin_ask" />

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/dialog_popup_info_login_tv_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:text="@string/popupLogin_ask_btn" />

    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/dialog_popup_info_exit_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_round_primary_color"
        android:layout_gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/popupLogin_exit"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>